--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h2 {
 section {
   background-color: #222831;
 }
+/* Hero Section Start */
 .header {
   padding-top: 20px;
   padding-right: 20px;
@@ -67,3 +68,145 @@ button {
   height: 400px;
   border-radius: 100%;
 }
+/* Hero Section End */
+/* About Section Start */
+.about {
+  color: #fff;
+  padding: 50px 20px;
+  display: flex;
+}
+.about .left-side {
+}
+.about .left-side .title {
+  font-size: 70px;
+}
+.about .left-side .title span {
+  color: #00adb5;
+}
+.about .left-side .description {
+  font-weight: 200;
+  width: 50%;
+}
+.about .left-side .description .read-more-btn {
+  font-weight: 700;
+}
+
+.about .right-side {
+}
+.about .right-side img {
+  width: 400px;
+  height: 300px;
+}
+/* About Section End */
+/* Recent Work Start */
+.recent-work {
+  background-image: url("bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  padding: 50px 20px;
+  color: #fff;
+}
+.recent-work .title {
+  font-size: 80px;
+  margin-bottom: 20px;
+}
+.recent-work .title span {
+  color: #00adb5;
+}
+.recent-work .btn-container {
+  margin-bottom: 20px;
+}
+.recent-work .btn-container .filter-btn {
+  border-radius: 20px;
+}
+
+.recent-work .image-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 50px;
+}
+.recent-work .container-image {
+  padding: 50px;
+  background-color: #1b5cbd4f;
+  border-radius: 20px;
+}
+.recent-work .container-image img {
+  width: 100%;
+  border-radius: 20px;
+}
+/* Recent Work End */
+
+/* Contact Us sEction Start */
+.contact-us {
+  padding: 50px 20px;
+  color: #ffff;
+  display: flex;
+  gap: 50px;
+}
+.contact-us .left-side {
+}
+.contact-us .left-side h3 {
+  font-size: 80px;
+  margin-bottom: 20px;
+}
+.contact-us .left-side h3 span {
+  color: #00adb5;
+}
+.contact-us .left-side img {
+  width: 300px;
+}
+
+.contact-us .right-side {
+}
+.contact-us .right-side .name-email-container {
+  display: flex;
+  gap: 20px;
+}
+.contact-us .right-side .name-email-container .name {
+  display: flex;
+  flex-direction: column;
+}
+.contact-us .right-side .name-email-container .name label {
+}
+.contact-us .right-side .name-email-container .name input {
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding: 8px 5px;
+  border-radius: 2px;
+}
+.contact-us .right-side .name-email-container .email {
+  display: flex;
+  flex-direction: column;
+}
+.contact-us .right-side .name-email-container .email label {
+}
+.contact-us .right-side .name-email-container .email input {
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding: 8px 5px;
+  border-radius: 2px;
+}
+.contact-us .right-side .message {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.contact-us .right-side .message label {
+}
+.contact-us .right-side .message textarea {
+  height: 300px;
+  width: 100%;
+  background-color: transparent;
+  padding: 8px 5px;
+}
+.contact-us .right-side .send-btn {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+/* Contact Us sEction End */
